--- a/hour2_rule.html
+++ b/hour2_rule.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-KR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1만 시간의 법칙</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <div class="container">
         <header class="header">
+            <h1 class="header-hidden">1만시간의 법칙</h1>
             <div class="header-img">
             <img class="title" src="./img/title.png" alt="1만 시간의 법칙 제목"/>
             <img class="clock" src="./img/clock.png" alt="시계아이콘"/>
