--- a/hour2_rule.html
+++ b/hour2_rule.html
@@ -12,7 +12,7 @@
         <header class="header">
             <h1 class="header-hidden">1만시간의 법칙</h1>
             <div class="header-img">
-            <img class="title" src="./img/title.png" alt="1만 시간의 법칙 제목"/>
+            <img class="title" src="./img/title.png" alt="1만 시간의 법칙"/>
             </div>
             <p class="tag">"연습은 어제의 당신보다 당신을 더 낫게 만든다."</p>
         </header>
@@ -31,11 +31,11 @@
                 <input class="input1" type="text" placeholder="예)5시간" />
                 <p class="text">시간씩 훈련할 것이다.</p> -->
                 <p class="text">
-                    나는 <input class="input1" type="text" placeholder="예)프로그래밍언어" />
+                    나는 <input class="input1" type="text" placeholder="예)프로그래밍언어" aria-label="목표분야" />
                     전문가가 될 것이다
                 </p>
                 <p class="text">  
-                    그래서 앞으로 매일 하루에 <input class="input1" type="text" placeholder="예)5시간" /> 시간씩 훈련할 것이다.
+                    그래서 앞으로 매일 하루에 <input class="input1" type="number" placeholder="예)5시간" aria-label="하루 훈련 시간" /> 시간씩 훈련할 것이다.
                 </p>
             </section>
             <div class="btn-wrap">
@@ -55,7 +55,7 @@
         </main>
 
         <footer class="footer">
-            <img class="logo" src="./img/logo.png" alt="logo">
+            <img class="logo" src="./img/logo.png" alt="위니브">
             <p class="text2">본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 위니브에 있습니다.<br>
             수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.</p>
         </footer>
