결과갑에 output 태그 사용

--- a/hour2_rule.html
+++ b/hour2_rule.html
@@ -37,15 +37,14 @@
                 <p class="text">  
                     그래서 앞으로 매일 하루에 <input class="input1" type="number" placeholder="예)5시간" aria-label="하루 훈련 시간" /> 시간씩 훈련할 것이다.
                 </p>
-            </section>
-            <div class="btn-wrap">
+                <div class="btn-wrap">
             <button class="question">나는 며칠 동안 훈련을 해야 1만시간이 될까?</button>
             <img src="img/click.png" alt="" />
             </div>
-
+            </section>
             <section class="result-section">
-                <p class="text">당신은 <span class="big-text">프로그래밍</span>전문가가 되기 위해서<br>
-                대략 <span class="big-text">5110</span>일 이상 훈련하셔야 합니다!:)</p>
+                <p class="text">당신은 <output class="big-text">프로그래밍</output>전문가가 되기 위해서<br>
+                대략 <output class="big-text">5110</output>일 이상 훈련하셔야 합니다!:)</p>
             </section>
 
             <section class="action">
