--- a/hour2_rule.html
+++ b/hour2_rule.html
@@ -20,16 +20,12 @@
         <main class="main">
             <section class="intro-section">
                 <img class="quotes" src="./img/quotes.png" alt="" />
+                <h2 class="main-hidden">1만 시간의 훈련필요</h2>
                 <p class="phrase">1만 시간의 법칙은 어떤 분야의 전문가가 되기 위해서는 최소한 1만 시간의 훈련이 필요하다는 법칙이다.</p>
             </section>
 
             <section class="calculator-section">
-                <!-- <p class="text">나는</p>
-                <input class="input1" type="text" placeholder="예)프로그래밍언어" />
-                <p class="text">전문가가 될 것이다.</p><br>
-                <p class="text">그래서 앞으로 매일 하루에</p>
-                <input class="input1" type="text" placeholder="예)5시간" />
-                <p class="text">시간씩 훈련할 것이다.</p> -->
+                <h2 class="main-hidden">목표및 시간</h2>
                 <p class="text">
                     나는 <input class="input1" type="text" placeholder="예)프로그래밍언어" aria-label="목표분야" />
                     전문가가 될 것이다
@@ -48,6 +44,7 @@
             </section>
 
             <section class="action">
+                <h2 class="main-hidden">훈련 및 공유</h2>
                 <button class="go-btn">훈련하러 가기 GO!GO!</button>
                 <button class="share-btn">공유하기</button>
             </section>
@@ -60,12 +57,12 @@
         </footer>
     </div>
     <div class="modal hidden">
-        <div class="modal-content">
+        <dialog class="modal-content">
         <h2>화이팅!!♥♥♥</h2>
         <p>당신의 꿈을 응원합니다!</p>
         <img src="./img/licat.png" alt="응원licat">
         <button class="end-btn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
-        </div>
+        </dialog>
     </div>
 
     
