일만시간의 법칙 웹 완료

--- a/hour2_rule.html
+++ b/hour2_rule.html
@@ -21,7 +21,7 @@
             <section class="intro-section">
                 <img class="quotes" src="./img/quotes.png" alt="" />
                 <h2 class="main-hidden">1만 시간의 훈련필요</h2>
-                <p class="phrase">1만 시간의 법칙은 어떤 분야의 전문가가 되기 위해서는 최소한 1만 시간의 훈련이 필요하다는 법칙이다.</p>
+                <p class="phrase">1만 시간의 법칙은<br> <span class="p-text">어떤 분야의 전문가가 되기 위해서는<br> 최소한 1만 시간의 훈련이 필요하다는 법칙이다.</span></p>
             </section>
 
             <section class="calculator-section">
@@ -34,7 +34,7 @@
                     그래서 앞으로 매일 하루에 <input class="input1" type="number" placeholder="예)5시간" aria-label="하루 훈련 시간" /> 시간씩 훈련할 것이다.
                 </p>
                 <div class="btn-wrap">
-            <button class="question">나는 며칠 동안 훈련을 해야 1만시간이 될까?</button>
+            <button class="btn question">나는 며칠 동안 훈련을 해야 1만시간이 될까?</button>
             <img src="img/click.png" alt="" />
             </div>
             </section>
@@ -45,8 +45,8 @@
 
             <section class="action">
                 <h2 class="main-hidden">훈련 및 공유</h2>
-                <button class="go-btn">훈련하러 가기 GO!GO!</button>
-                <button class="share-btn">공유하기</button>
+                <button class="btn go-btn">훈련하러 가기 GO!GO!</button>
+                <button class="btn share-btn">공유하기</button>
             </section>
         </main>
 
@@ -57,12 +57,12 @@
         </footer>
     </div>
     <div class="modal hidden">
-        <dialog class="modal-content">
+        <div class="modal-content">
         <h2>화이팅!!♥♥♥</h2>
         <p>당신의 꿈을 응원합니다!</p>
-        <img src="./img/licat.png" alt="응원licat">
-        <button class="end-btn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
-        </dialog>
+        <img src="./img/licat.png" alt="응원licat"><br>
+        <button class="btn end-btn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
+        </div>
     </div>
 
     
