--- a/hour2_rule.html
+++ b/hour2_rule.html
@@ -35,7 +35,7 @@
                 </p>
                 <div class="btn-wrap">
             <button class="btn question">나는 며칠 동안 훈련을 해야 1만시간이 될까?</button>
-            <img src="img/click.png" alt="" />
+            <img class="click" src="img/click.png" alt="" />
             </div>
             </section>
             <section class="result-section">
@@ -58,8 +58,8 @@
     </div>
     <div class="modal hidden">
         <div class="modal-content">
-        <h2>화이팅!!♥♥♥</h2>
-        <p>당신의 꿈을 응원합니다!</p>
+        <h2 class="h2">화이팅!!♥♥♥</h2>
+        <p class="p">당신의 꿈을 응원합니다!</p>
         <img src="./img/licat.png" alt="응원licat"><br>
         <button class="btn end-btn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
         </div>
